2002-03-27  Elliot Glaysher  <glaysher@umich.edu>

	* lib/spex: Comic appears to have died.
	* lib/sluggy_freelance (sluggy): Note to self: Remove your debugging
	messages BEFORE making a commit.

2002-03-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/netcomics.pod: Fixed -t not being surrounded by B<>.

2002-03-26  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/Factory.pm (build_date_array):  Hopefully fix the date
	problems for *everybody* this time.

2002-03-26  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/keenspot (youdamn): Changed to use an "exists" list instead
	of a "missing" list & updated it up to today.

2002-03-26  Elliot Glaysher  <glaysher@umich.edu>

	* lib/inktank (ww): Fix for Weekend Warriors by Chris Hostetter.
	* Netcomics/Factory.pm (build_date_array): Changed way I fixed the
	time problem.

2002-03-25  Elliot Glaysher  <glaysher@umich.edu>

	* lib/sluggy_freelance (sluggy): Fixed sluggy (wasn't getting all the
	images, since it was assumed that only sunday strips had multiple-
	images)
	* Netcomics/Util.pm (processSyms): Fixed type that was causing an
	annoying error

2002-03-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (load_RLI_files): Fixed code that tests for
	file existance when the .rli file doesn't exist when not not
	separating comics into their own dirs.
	* lib/alexsrestaurant: moved alex over from nando & updated it for
	it being in its own website.
	* lib/nando: removed file.
	* Makefile.PL: Moved nando to removed list, added alexsrestaurant.
	* MANIFEST: Removed nando, added alexsrestaurant

2002-03-24  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics: Added listing themes on stdout.
	* doc/Modify_Webpage_Creation-HOWTO.html: Updated to reflect new
	template style & all things that get replaced.
	* Netcomics/Util.pm (processSyms): New function that provides
	introspection into the specified namespace to find all packages